--- a/Doctors_Appointment_Booking_System/account/templates/login.html
+++ b/Doctors_Appointment_Booking_System/account/templates/login.html
@@ -47,20 +47,20 @@
 
                 <button class="btn btn-primary w-100" type="submit">Sign in</button>
 
-                {% load socialaccount %}
-                <a href="{% provider_login_url 'google' process='login' %}">Sign in with Google</a>
-
 {#                {% load socialaccount %}#}
-{#                {% get_providers as socialaccount_providers %}#}
-{#                <ul>#}
-{#                  {% for provider in socialaccount_providers %}#}
-{#                    {% if provider.social_app %} {# only true if SocialApp is configured for current Site #}
-{#                      <li><a href="{% provider_login_url provider.id process='login' %}">#}
-{#                        Sign in with {{ provider.name }}#}
-{#                      </a></li>#}
-{#                    {% endif %}#}
-{#                  {% endfor %}#}
-{#                </ul>#}
+{#                <a href="{% provider_login_url 'google' process='login' %}">Sign in with Google</a>#}
+
+                {% load socialaccount %}
+                {% get_providers as socialaccount_providers %}
+                <ul>
+                  {% for provider in socialaccount_providers %}
+                    {% if provider.social_app %} {# only true if SocialApp is configured for current Site
+                      <li><a href="{% provider_login_url provider.id process='login' %}">
+                        Sign in with {{ provider.name }}
+                      </a></li>
+                    {% endif %}
+                  {% endfor %}
+                </ul>
 
               </form>
 
