--- a/Doctors_Appointment_Booking_System/templates/account/password_change.html
+++ b/Doctors_Appointment_Booking_System/templates/account/password_change.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% block title %}Change Password{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
@@ -6,7 +6,7 @@
     <div class="card p-4">
       <h4 class="mb-3">Change Password</h4>
       <form method="post">{% csrf_token %}
-        {% include "_form_fields.html" with form=form %}
+        {% include "account/_form_fields.html" with form=form %}
         <div class="d-flex gap-2">
           <button class="btn btn-primary">Update Password</button>
           <a class="btn btn-outline-secondary" href="javascript:history.back()">Cancel</a>
