--- a/Doctors_Appointment_Booking_System/templates/account/password_change_done.html
+++ b/Doctors_Appointment_Booking_System/templates/account/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% block title %}Password Updated{% endblock %}
 {% block content %}
 <div class="alert alert-success">
