--- a/Doctors_Appointment_Booking_System/templates/account/patient_profile.html
+++ b/Doctors_Appointment_Booking_System/templates/account/patient_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% block title %}My Patient Profile{% endblock %}
 {% block content %}
 
