--- a/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_form.html
+++ b/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_form.html
@@ -40,12 +40,12 @@
                 <div class="text-danger small">{{ form.address.errors }}</div>
               </div>
 
-              <div class="col-12">
+              {% comment %} <div class="col-12">
                 <label class="form-label" for="{{ form.working_hours.id_for_label }}">Working hours</label>
                 {{ form.working_hours|add_class:"form-control" }}
                 <div class="form-text">e.g. Sat–Thu, 9:00–18:00</div>
                 <div class="text-danger small">{{ form.working_hours.errors }}</div>
-              </div>
+              </div> {% endcomment %}
 
               <div class="col-12">
                 <label class="form-label" for="{{ form.description.id_for_label }}">Description</label>
