--- a/Doctors_Appointment_Booking_System/templates/account/login.html
+++ b/Doctors_Appointment_Booking_System/templates/account/login.html
@@ -8,6 +8,7 @@
     <title>Sign in</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
     <style>
       :root{
         --bg1:#0ea5e9; /* sky-500 */
@@ -148,15 +149,17 @@
 {#                  {% endfor %}#}
 {#                </div>#}
 {#              {% endif %}#}
-            
+
             <div class="row g-2">
-                  <div class="col-12 col-sm-6">
-                    {% load socialaccount %}
-                    <a class="provider-btn" href="{% provider_login_url 'google' process='login' %}">
-                        Google
-                    </a>
-                  </div>
+              <div class="col-12 col-sm-6">
+                {% load socialaccount %}
+                <a class="provider-btn" href="{% provider_login_url 'google' process='login' %}">
+                  <i class="bi bi-google"></i>
+                  <span>- Google</span>
+                </a>
+              </div>
             </div>
+
 
             </form>
 
