fix some bugs related to base_generic.html

--- a/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_detail.html
+++ b/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_generic.html" %}
 {% load static %}
 {% block title %}Clinic – {{ clinic.name }}{% endblock %}
 
@@ -82,12 +82,8 @@
                     <a class="small d-inline-block mt-2" href="{% url 'doctor:detail' c.pk %}">View</a>
                     {% if user.is_authenticated and c.patient_id.user_id == user.id %}
                       <a class="small d-inline-block mt-2" href="{% url 'doctor:comment_update' c.pk %}">Edit</a>
-                      {% comment %} <a class="small d-inline-block mt-2" href="{% url 'doctor:comment_delete' c.pk %}">Delete</a> {% endcomment %}
                       <a href="{% url 'doctor:comment_delete' c.pk %}?next={% url 'doctor:clinic_detail' clinic.pk %}">Delete</a>
-
                     {% endif %}
-
-                    {% comment %} <a class="small d-inline-block mt-2" href="{% url 'doctor:comment_update' c.pk %}">Edit</a> {% endcomment %}
                   </li>
                 {% endfor %}
               </ul>
@@ -102,7 +98,7 @@
 
     
     <!-- Right: opening hours & actions -->
-    {% comment %} <div class="col-12 col-lg-4">
+  <div class="col-12 col-lg-4">
       <div class="card mb-3">
         <div class="card-body">
           <h5 class="mb-3">Doctors</h5>
@@ -127,7 +123,7 @@
           {% endif %}
         </div>
       </div>
-    </div> {% endcomment %}
+    </div> 
 
   </div>
 </div>
