--- a/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_form.html
+++ b/Doctors_Appointment_Booking_System/doctor/templates/doctor/clinic_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_generic.html" %}
 {% load widget_tweaks %}
 {% block title %}Create Clinic{% endblock %}
 
