--- a/Doctors_Appointment_Booking_System/doctor/templates/doctor/comment_confirm_delete.html
+++ b/Doctors_Appointment_Booking_System/doctor/templates/doctor/comment_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_generic.html" %}
 {% block title %}Delete Comment #{{ comment.pk }}{% endblock %}
 {% block content %}
 <div class="container my-4">
