--- a/Doctors_Appointment_Booking_System/doctor/templates/doctor/comment_detail.html
+++ b/Doctors_Appointment_Booking_System/doctor/templates/doctor/comment_detail.html
@@ -1,5 +1,4 @@
-{# doctor/templates/doctor/comment_detail.html #}
-{% extends "base.html" %}
+{% extends "base_generic.html" %}
 {% block title %}Comment #{{ comment.pk }}{% endblock %}
 {% block content %}
 <div class="container my-4">
